[project]
name = "automate-minimas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
